@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+24-Jul-2013 Jean-Marie Simonet
+ # [#31548] Toolbar: Different version of CSS vs LESS files + mobile resolution fixes. Thanks Roberto Segura
+
 23-Jul-2013 Michael Babker
  # [#31500] Hathor: No Batch at some Managers.  Thanks Angelika Reisiger
  # [#31547] IDN library missing from update sql files 3.1.2+master.  Thanks Elin Waring
